--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,6 +1,6 @@
 title = "Unified SDK gitleaks config"
 
 [whitelist]
-  regexes = [
+  exactMatch = [
     '0x7EEC32793414aAb720a90073607733d9e7B0ecD0'
   ]
