--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -35,6 +35,8 @@
     "test": "jest",
     "test:e2e": "jest --runInBand --testMatch \"**/?(*.)+(e2e).[jt]s?(x)\"",
     "run:demo": "jest --runInBand --testMatch \"**/?(*.)+(demo).[jt]s?(x)\"",
+    "run:demo-fulfil": "jest ./test/fulfil.demo.test",
+    "run:demo-expiry": "jest ./test/expiry.demo.test",
     "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
