--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -8,6 +8,7 @@
     "@imtbl/economy": "0.0.0",
     "@imtbl/passport": "0.0.0",
     "@imtbl/provider": "0.0.0",
+    "@metamask/eth-sig-util": "^5.1.0",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -21,7 +22,8 @@
     "tslib": "latest",
     "url": "^0.11.0",
     "variant-classnames": "^1.3.0",
-    "vite-plugin-node-polyfills": "^0.8.2"
+    "vite-plugin-node-polyfills": "^0.8.2",
+    "web3": "^4.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.1",
