--- a/packages/internal/cryptofiat/package.json
+++ b/packages/internal/cryptofiat/package.json
@@ -5,6 +5,7 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
+    "@imtbl/config": "0.0.0",
     "axios": "^1.3.5"
   },
   "devDependencies": {
