--- a/sdk/package.json
+++ b/sdk/package.json
@@ -9,9 +9,13 @@
     "@ethersproject/providers": "^5.7.2",
     "@ethersproject/wallet": "^5.7.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
+    "@jest/globals": "^29.5.0",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
     "@opensea/seaport-js": "^1.3.0",
+    "@uniswap/router-sdk": "^1.4.0",
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/v3-sdk": "^3.9.0",
     "axios": "^1.3.5",
     "bn.js": "^5.2.1",
     "enc-utils": "^3.0.0",
@@ -80,14 +84,6 @@
     "./provider": {
       "types": "./dist/provider.d.ts",
       "import": "./dist/provider.js"
-    },
-    "./checkout_sdk": {
-      "types": "./dist/checkout_sdk.d.ts",
-      "import": "./dist/checkout_sdk.js"
-    },
-    "./checkout_widgets": {
-      "types": "./dist/checkout_widgets.d.ts",
-      "import": "./dist/checkout_widgets.js"
     },
     "./erc20": {
       "types": "./dist/erc20.d.ts",
