--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -50,8 +50,8 @@ jobs:
 
       - name: Lint
         run: yarn lint
-  build:
-    name: Build
+  typecheck:
+    name: Typecheck
     runs-on: ubuntu-latest
     needs: [deps]
     steps:
@@ -78,34 +78,6 @@ jobs:
 
       - name: Typecheck
         run: yarn typecheck
-
-      - name: Test
-        run: yarn test
-  typecheck:
-    name: Typecheck
-    runs-on: ubuntu-latest
-    needs: [deps]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-          registry-url: https://registry.npmjs.org/
-          cache: yarn
-
-      - name: Install dependencies
-        run: yarn install --immutable
-
-      - name: Check Single Package Version Policy
-        run: yarn syncpack:check
-
-      - name: Typecheck
-        run: yarn typecheck
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -128,6 +100,9 @@ jobs:
 
       - name: Check Single Package Version Policy
         run: yarn syncpack:check
+
+      - name: Build
+        run: export NODE_OPTIONS=--max-old-space-size=6144 && yarn build
 
       - name: Test
         run: yarn test
