--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -43,7 +43,8 @@
     "docs": "typedoc --plugin typedoc-plugin-markdown --skipErrorChecking --disableSources --out docs src/index.ts",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "lint:fix": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0 --fix",
-    "start": "CHECKOUT_ENVIRONMENT=local && parcel watch",
+    "start:dev": "CHECKOUT_DEV_MODE=local && parcel watch",
+    "start": "parcel watch",
     "start:version": "parcel watch",
     "test": "jest test",
     "test:watch": "jest test --watch"
