ID-818 Migrated Passport sample app

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "packages/erc20",
     "packages/erc721-permissioned-mintable",
     "packages/immutablex_client",
-    "packages/passport",
+    "packages/passport/sdk",
+    "packages/passport/sample-app",
     "packages/provider",
     "packages/provider/src/sample-app",
     "packages/orderbook",
