--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -22,8 +22,7 @@
     "tslib": "latest",
     "url": "^0.11.0",
     "variant-classnames": "^1.3.0",
-    "vite-plugin-node-polyfills": "^0.8.2",
-    "web3": "^4.0.1"
+    "vite-plugin-node-polyfills": "^0.8.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.1",
