ID-818 Fixed issue with resources not loading when hosted in S3

--- a/.github/workflows/passport-sample-app-deployment.yaml
+++ b/.github/workflows/passport-sample-app-deployment.yaml
@@ -52,5 +52,5 @@ jobs:
 
       - name: Clear the cloudfront cache
         run: |
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.PROD_DISTRIBUTION_ID }} --paths "/*"
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.CF_PASSPORT_PROD_DISTRIBUTION_ID }} --paths "/*"
           TODO: ADD 
