--- a/packages/passport/sample-app/.env.production
+++ b/packages/passport/sample-app/.env.production
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_ENV=prod
 NEXT_PUBLIC_REDIRECT_URI=https://passport.immutable.com/sample-app/login/callback
 NEXT_PUBLIC_LOGOUT_REDIRECT_URI=https://passport.immutable.com/sample-app
+NEXT_PUBLIC_BASE_PATH=/sample-app
