--- a/packages/passport/sample-app/package.json
+++ b/packages/passport/sample-app/package.json
@@ -2,33 +2,31 @@
   "name": "@imtbl/passport-sample-app",
   "version": "0.1.0",
   "dependencies": {
-    "@biom3/design-tokens": "^0.1.0-beta",
-    "@biom3/react": "^0.1.2-beta",
-    "@imtbl/core-sdk": "^1.1.0",
+    "@biom3/design-tokens": "^0.2.2-beta",
+    "@biom3/react": "^0.6.4-beta",
+    "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@imtbl/sdk": "0.0.0",
     "@metamask/detect-provider": "^2.0.0",
     "@next/font": "13.1.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.3.1",
     "ethers": "^5.7.2",
-    "next": "13.1.6",
-    "react": "18.2.0",
+    "next": "13.3.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.7",
-    "@types/node": "^18.14.0",
+    "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0"
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1"
   },
   "private": true,
   "scripts": {
