--- a/packages/passport/sample-app/package.json
+++ b/packages/passport/sample-app/package.json
@@ -32,7 +32,7 @@
     "build": "next build",
     "dev": "next dev",
     "export": "next export",
-    "lint": "next lint",
+    "lint": "eslint ./src --ext .ts --max-warnings=0",
     "start": "next start"
   }
 }
