--- a/packages/passport/sample-app/package.json
+++ b/packages/passport/sample-app/package.json
@@ -9,14 +9,11 @@
     "@metamask/detect-provider": "^2.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
-    "eslint": "^8.40.0",
-    "eslint-config-next": "13.3.1",
     "ethers": "^5.7.2",
     "next": "13.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.7",
@@ -25,7 +22,10 @@
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1"
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint": "^8.40.0",
+    "eslint-config-next": "13.3.1",
+    "typescript": "^4.9.5"
   },
   "private": true,
   "scripts": {
