--- a/.github/workflows/passport-sdk-sample-app-deployment.yaml
+++ b/.github/workflows/passport-sdk-sample-app-deployment.yaml
@@ -30,6 +30,7 @@ jobs:
         id: cache-node-modules
         with:
           path: ./node_modules
+          key: ${{ runner.os }}-nodemodules-${{ hashFiles('yarn.lock') }}
 
       - name: Install Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
