Updated workflow to run on push to main with Passport changes

--- a/.github/workflows/passport-sdk-sample-app-deployment.yaml
+++ b/.github/workflows/passport-sdk-sample-app-deployment.yaml
@@ -1,6 +1,11 @@
 name: Passport SDK Sample App Deployment
 
 on:
+  push:
+    paths:
+      - 'packages/passport/**'
+    branches:
+      - main
   workflow_dispatch:
 
 # this is used by github OIDC to assume the admin role later on
