--- a/.github/workflows/passport-sdk-sample-app-deployment.yaml
+++ b/.github/workflows/passport-sdk-sample-app-deployment.yaml
@@ -1,6 +1,11 @@
 name: Passport SDK Sample App Deployment
 
 on:
+  push:
+    paths:
+      - 'packages/passport/**'
+    branches:
+      - main
   workflow_dispatch:
 
 # this is used by github OIDC to assume the admin role later on
@@ -25,18 +30,24 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+
       - name: Cache node modules
-        uses: actions/cache@v2
-        id: cache-node-modules
+        uses: actions/cache@v3
+        id: yarn-cache
         with:
-          path: ./node_modules
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
-      - name: Install Dependencies
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: yarn install
+      - name: Install dependencies
+        run: yarn install --immutable
 
-      - name: Build Passport module
-        run: yarn workspace @imtbl/passport build
+      - name: Build
+        run: export NODE_OPTIONS=--max-old-space-size=6144 && yarn build
 
       - name: Build Passport sample app
         run: yarn workspace @imtbl/passport-sdk-sample-app build
