--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "packages/economy/playground",
     "packages/economy/services",
     "packages/blockchain-data/sdk",
-    "packages/blockchain-data/sample-app"
+    "packages/blockchain-data/sample-app",
+    "packages/game-bridge"
   ]
 }
