fix lint issues

--- a/packages/game-bridge/package.json
+++ b/packages/game-bridge/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game-bridge",
+  "name": "@imtbl/game-bridge",
   "version": "0.0.0",
   "dependencies": {
     "@imtbl/config": "0.0.0",
