--- a/packages/checkout/widgets-lib/package.json
+++ b/packages/checkout/widgets-lib/package.json
@@ -56,8 +56,9 @@
   "private": true,
   "scripts": {
     "build": "cp src/build.ts src/index.tsx && GENERATE_SOURCEMAP=false react-scripts build",
-    "build:dist": "yarn build && yarn dist:sample",
+    "build:dist": "yarn build && yarn dist:sample  && yarn dist:portfolio",
     "dist:sample": "mkdir -p ../widgets-sample-app/public/lib/js && cp build/static/js/main.*.js ../widgets-sample-app/public/lib/js/imtbl-checkout.js",
+    "dist:portfolio": "mkdir -p ../portfolio/public/lib/js && cp build/static/js/main.*.js ../portfolio/public/lib/js/imtbl-checkout.js",
     "dist:sdk": "mkdir -p ../../../sdk/dist/browser && cp build/static/js/main.*.js ../../../sdk/dist/browser/checkout.js",
     "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
