--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@biom3/design-tokens": "0.2.0-beta"
   },
   "scripts": {
-    "build": "wsrun -p @imtbl/sdk -p @imtbl/checkout-widgets-lib -e -r --stages build && yarn syncpack:format && yarn wsrun -p @imtbl/sdk -a -m copyBrowserBundles",
-    "build:all": "wsrun -y 4 --stages build && yarn syncpack:format",
+    "build": "wsrun -p @imtbl/sdk -p @imtbl/checkout-widgets-lib -e -r --serial build && yarn syncpack:format && yarn wsrun -p @imtbl/sdk -a -m copyBrowserBundles",
+    "build:onlysdk": "wsrun -y 4 --stages build && yarn syncpack:format",
     "lint": "wsrun --exclude-missing -e lint --no-error-on-unmatched-pattern",
     "lint:ci": "./lint-ci.sh",
     "postinstall": "husky install; ./.husky/install_gitleaks.sh",
