--- a/packages/passport/sdk-sample-app/.env.development
+++ b/packages/passport/sdk-sample-app/.env.development
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_ENV=dev
 NEXT_PUBLIC_REDIRECT_URI=http://localhost:3000/login/callback
+# The logout URI is used for both silent logout and redirect logout. Use the value below when testing silent logout
+#NEXT_PUBLIC_LOGOUT_REDIRECT_URI=http://localhost:3000/silent-logout/callback
 NEXT_PUBLIC_LOGOUT_REDIRECT_URI=http://localhost:3000
