--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -10,6 +10,8 @@
     "@imtbl/toolkit": "0.0.0",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@walletconnect/ethereum-provider": "^2.9.0",
+    "@walletconnect/modal": "^2.6.0",
     "axios": "^1.3.5",
     "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
