--- a/sdk/package.json
+++ b/sdk/package.json
@@ -16,6 +16,8 @@
     "@uniswap/router-sdk": "^1.4.0",
     "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/v3-sdk": "^3.9.0",
+    "@walletconnect/ethereum-provider": "^2.9.0",
+    "@walletconnect/modal": "^2.6.0",
     "axios": "^1.3.5",
     "bn.js": "^5.2.1",
     "enc-utils": "^3.0.0",
