ID-930 Use env var for silent logout parent URI

--- a/packages/passport/sdk-sample-app/.env.production
+++ b/packages/passport/sdk-sample-app/.env.production
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_ENV=prod
 NEXT_PUBLIC_REDIRECT_URI=https://passport.immutable.com/sdk-sample-app/login/callback
+NEXT_PUBLIC_LOGOUT_REDIRECT_URI=https://passport.immutable.com/sdk-sample-app
 # The logout URI is used for both silent logout and redirect logout. Use the value below when testing silent logout
 #NEXT_PUBLIC_LOGOUT_REDIRECT_URI=http://localhost:3000/sdk-sample-app/silent-logout/callback
-NEXT_PUBLIC_LOGOUT_REDIRECT_URI=https://passport.immutable.com/sdk-sample-app
+NEXT_PUBLIC_SILENT_LOGOUT_PARENT_URI=https://passport.immutable.com
 NEXT_PUBLIC_BASE_PATH=/sdk-sample-app
