--- a/packages/passport/sdk-sample-app/.env.development
+++ b/packages/passport/sdk-sample-app/.env.development
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_ENV=dev
 NEXT_PUBLIC_REDIRECT_URI=http://localhost:3000/login/callback
+#NEXT_PUBLIC_LOGOUT_REDIRECT_URI=http://localhost:3000
 # The logout URI is used for both silent logout and redirect logout. Use the value below when testing silent logout
-#NEXT_PUBLIC_LOGOUT_REDIRECT_URI=http://localhost:3000/silent-logout/callback
-NEXT_PUBLIC_LOGOUT_REDIRECT_URI=http://localhost:3000
+NEXT_PUBLIC_LOGOUT_REDIRECT_URI=http://localhost:3000/silent-logout/callback
+NEXT_PUBLIC_SILENT_LOGOUT_PARENT_URI=http://localhost:3000
