--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -5,9 +5,7 @@
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
     "@imtbl/config": "0.0.0",
-    "@opensea/seaport-js": "^1.3.0",
-    "axios": "^1.3.5",
-    "ethers": "^5.7.2"
+    "axios": "^1.3.5"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
@@ -26,6 +24,10 @@
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "main": "dist/index.js",
+  "peerDependencies": {
+    "@opensea/seaport-js": "^1.3.0",
+    "ethers": "^5.7.2"
+  },
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
