--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@imtbl/config": "0.0.0",
     "@opensea/seaport-js": "^1.3.0",
-    "axios": "^1.3.5"
+    "axios": "^1.3.5",
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
@@ -25,9 +26,6 @@
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "main": "dist/index.js",
-  "peerDependencies": {
-    "ethers": "^5.7.2"
-  },
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
