--- a/packages/passport/sdk/package.json
+++ b/packages/passport/sdk/package.json
@@ -5,6 +5,8 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
+    "@0xsequence/abi": "^0.43.34",
+    "@0xsequence/config": "^0.43.34",
     "@ethersproject/providers": "^5.7.2",
     "@imtbl/config": "0.0.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
@@ -30,9 +32,11 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "cross-fetch": "^3.1.6",
     "eslint": "^8.40.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "msw": "^1.2.2",
     "prettier": "^2.8.7",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
