--- a/packages/passport/sdk-sample-app/package.json
+++ b/packages/passport/sdk-sample-app/package.json
@@ -5,7 +5,7 @@
     "@biom3/design-tokens": "0.2.0-beta",
     "@biom3/react": "^0.6.4-beta",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
-    "@imtbl/sdk": "0.0.0",
+    "@imtbl/passport": "0.0.0",
     "@metamask/detect-provider": "^2.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
