--- a/packages/passport/sdk-sample-app/package.json
+++ b/packages/passport/sdk-sample-app/package.json
@@ -4,8 +4,11 @@
   "dependencies": {
     "@biom3/design-tokens": "0.2.0-beta",
     "@biom3/react": "^0.6.4-beta",
+    "@imtbl/config": "0.0.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
+    "@imtbl/immutablex-client": "0.0.0",
     "@imtbl/passport": "0.0.0",
+    "@imtbl/provider": "0.0.0",
     "@metamask/detect-provider": "^2.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
