--- a/packages/internal/toolkit/package.json
+++ b/packages/internal/toolkit/package.json
@@ -8,7 +8,7 @@
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@ethersproject/wallet": "^5.7.0",
-    "@imtbl/core-sdk": "^1.1.1-alpha.1",
+    "@imtbl/core-sdk": "^2.0.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
     "axios": "^1.3.5",
