--- a/packages/provider/src/sample-app/package.json
+++ b/packages/provider/src/sample-app/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@biom3/react": "^0.6.4-beta",
-    "@imtbl/core-sdk": "^1.1.1-alpha.1",
+    "@imtbl/core-sdk": "^2.0.1",
     "@imtbl/sdk": "0.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
