upgrade biome and migrate for breaking changes

--- a/packages/checkout/widgets-lib/.eslintrc
+++ b/packages/checkout/widgets-lib/.eslintrc
@@ -63,6 +63,9 @@
     ],
     "class-methods-use-this": ["off"],
     "react/require-default-props": ["off"],
-    "react/react-in-jsx-scope": ["off"]
+    "react/react-in-jsx-scope": ["off"],
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/anchor-has-content": "off",
+    "react/jsx-props-no-spreading": "off",
   }
 }
