Typedoc packages config.

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "test": "wsrun --exclude-missing -e test",
     "typecheck": "wsrun --exclude-missing typecheck",
     "docs:build": "typedoc",
-    "docs:serve": "http-server ./docs --cors -p 8080"
+    "docs:serve": "http-server ./docs --cors -p 8080 -c-1"
   },
   "workspaces": [
     "sdk",
