--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -5,7 +5,7 @@
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
     "@imtbl/config": "0.0.0",
-    "@opensea/seaport-js": "^1.3.0",
+    "@opensea/seaport-js": "2.0.5",
     "axios": "^1.3.5",
     "ethers": "^5.7.2"
   },
