--- a/sdk/package.json
+++ b/sdk/package.json
@@ -15,6 +15,7 @@
     "@jest/globals": "^29.5.0",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@opensea/seaport-js": "2.0.5",
     "@uniswap/router-sdk": "^1.4.0",
     "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/v3-sdk": "^3.9.0",
