Add LOCAL_DEVELOPMENT config to use internal rpc urls

--- a/packages/checkout/sdk/package.json
+++ b/packages/checkout/sdk/package.json
@@ -39,11 +39,13 @@
   "scripts": {
     "build": "parcel build",
     "build:dev": "CHECKOUT_DEV_MODE=true parcel build --no-source-maps",
+    "build:local": "LOCAL_DEVELOPMENT=true parcel build --no-source-maps",
     "docs": "typedoc --plugin typedoc-plugin-markdown --skipErrorChecking --disableSources --out docs src/index.ts",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "lint:fix": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0 --fix",
     "start": "parcel watch",
     "start:dev": "CHECKOUT_DEV_MODE=true parcel watch",
+    "start:local": "LOCAL_DEVELOPMENT=true parcel watch",
     "test": "jest test",
     "test:coverage": "jest --coverage",
     "test:watch": "jest test --watch",
