--- a/packages/checkout/widgets-sample-app/package.json
+++ b/packages/checkout/widgets-sample-app/package.json
@@ -19,6 +19,7 @@
     "@imtbl/checkout-sdk": "0.0.0",
     "@imtbl/checkout-widgets": "0.0.0",
     "@imtbl/config": "0.0.0",
+    "@ramp-network/ramp-instant-sdk": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0"
