chore: remove package lock and update game bridge dependencies

--- a/packages/game-bridge/package.json
+++ b/packages/game-bridge/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "@imtbl/config": "0.0.0",
+    "@imtbl/immutablex-client": "0.0.0",
     "@imtbl/passport": "0.0.0",
     "@imtbl/provider": "0.0.0"
   },
