--- a/.github/workflows/economy-playground-storybook.yaml
+++ b/.github/workflows/economy-playground-storybook.yaml
@@ -13,23 +13,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Cache node modules
-        uses: actions/cache@v2
-        id: cache-node-modules
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          path: ./node_modules
-          key: ${{ runner.os }}-build-${{ secrets.CHROMATIC_PROJECT_TOKEN }}-${{ hashFiles('**/yarn.lock') }}
+          node-version: lts/*
+          registry-url: https://registry.npmjs.org/
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install dependencies
+        run: yarn install --immutable
 
-      - name: Install Dependencies
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: yarn install
-
-      - name: Build all packages
-        run: npm run build
+      - name: Build
+        run: export NODE_OPTIONS=--max-old-space-size=6144 && yarn build
         
       - name: Build Checkout SDK
         run: yarn workspace @imtbl/checkout-sdk build && yarn workspace @imtbl/checkout-widgets build
