--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-immutable-sdk",
   "description": "Immutable Unified TypeScript SDK",
-  "version": "0.0.0",
+  "version": "0.4.1-alpha.1",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "devDependencies": {
