[WT-1521] execute checkout widgets cypress tests and upload artifacts

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "syncpack:fix": "yarn syncpack fix-mismatches",
     "syncpack:format": "yarn syncpack format",
     "test": "wsrun --exclude-missing -e test",
-    "test:cypress": "wsrun --exclude-missing -e test:cypress",
+    "test:cypress:ci": "wsrun --exclude-missing -e test:cypress",
+    "test:checkout:cypress:ci": "wsrun -p @imtbl/checkout-widgets-lib --exclude-missing -e test:cypress",
     "typecheck": "wsrun --exclude-missing typecheck"
   },
   "workspaces": [
