--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -53,5 +53,18 @@ jobs:
       - name: Test
         run: yarn test
 
-      - name: Cypress tests
-        run: yarn test:cypress
+      - name: Checkout-widgets cypress tests
+        run: yarn test:checkout:cypress:ci
+
+      - name: Upload cypress videos artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: cypress-videos
+          path: ./cypress/videos
+
+      - name: Upload cypress screenshots artifacts
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: ./cypress/screenshots
