--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -8,8 +8,10 @@ on:
 
 jobs:
   build:
-    name: Build, Lint, Typecheck, Test
+    name: Lint, Build
     runs-on: ubuntu-latest
+    outputs:
+      yarn-cache-dir-path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -47,11 +49,147 @@ jobs:
       - name: Build
         run: export NODE_OPTIONS=--max-old-space-size=6144 && yarn build
 
+      - name: Upload sdk build
+        uses: actions/upload-artifact@v2
+        with:
+          name: sdk-build
+          if-no-files-found: error
+          path: ./sdk/dist
+          retention-days: 1
+
+      - name: Upload checkout widgets build
+        uses: actions/upload-artifact@v2
+        with:
+          name: checkout-widgets-build
+          if-no-files-found: error
+          path: ./packages/checkout/widgets-lib/build
+          retention-days: 1
+
+  typecheck:
+    name: Typecheck
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Download the sdk-build
+        uses: actions/download-artifact@v2
+        with:
+          name: sdk-build
+          path: ./sdk/dist
+
+      - name: Download the checkout-widgets-build
+        uses: actions/download-artifact@v2
+        with:
+          name: checkout-widgets-build
+          path: ./packages/checkout/widgets-lib/build
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+          registry-url: https://registry.npmjs.org/
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ needs.build.outputs.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        run: yarn install --immutable
+
       - name: Typecheck
         run: yarn typecheck
 
+  Test:
+    name: Unit tests
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Download the sdk-build
+        uses: actions/download-artifact@v2
+        with:
+          name: sdk-build
+          path: ./sdk/dist
+
+      - name: Download the checkout-widgets-build
+        uses: actions/download-artifact@v2
+        with:
+          name: checkout-widgets-build
+          path: ./packages/checkout/widgets-lib/build
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+          registry-url: https://registry.npmjs.org/
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ needs.build.outputs.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        run: yarn install --immutable
+
       - name: Test
         run: yarn test
+
+  cypress-test:
+    name: Cypress tests
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Download the sdk-build
+        uses: actions/download-artifact@v2
+        with:
+          name: sdk-build
+          path: ./sdk/dist
+
+      - name: Download the checkout-widgets-build
+        uses: actions/download-artifact@v2
+        with:
+          name: checkout-widgets-build
+          path: ./packages/checkout/widgets-lib/build
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+          registry-url: https://registry.npmjs.org/
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ needs.build.outputs.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        run: yarn install --immutable
 
       - name: Checkout-widgets cypress tests
         run: yarn test:checkout:cypress
