--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -10,8 +10,6 @@ jobs:
   build:
     name: Lint, Build
     runs-on: ubuntu-latest
-    outputs:
-      yarn-cache-dir-path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -49,83 +47,36 @@ jobs:
       - name: Build
         run: export NODE_OPTIONS=--max-old-space-size=6144 && yarn build
 
-      - name: Upload sdk build
-        uses: actions/upload-artifact@v2
-        with:
-          name: sdk-build
-          if-no-files-found: error
-          path: ./sdk/dist
-          retention-days: 1
-
-      - name: Upload checkout widgets build
-        uses: actions/upload-artifact@v2
-        with:
-          name: checkout-widgets-build
-          if-no-files-found: error
-          path: ./packages/checkout/widgets-lib/build
-          retention-days: 1
-
-  typecheck:
-    name: Typecheck
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Download the sdk-build
-        uses: actions/download-artifact@v2
-        with:
-          name: sdk-build
-          path: ./sdk/dist
-
-      - name: Download the checkout-widgets-build
-        uses: actions/download-artifact@v2
-        with:
-          name: checkout-widgets-build
-          path: ./packages/checkout/widgets-lib/build
-
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-          registry-url: https://registry.npmjs.org/
-
-      - name: Install dependencies
-        run: yarn install --immutable
-
       - name: Typecheck
         run: yarn typecheck
 
   Test:
     name: Unit tests
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Download the sdk-build
-        uses: actions/download-artifact@v2
-        with:
-          name: sdk-build
-          path: ./sdk/dist
-
-      - name: Download the checkout-widgets-build
-        uses: actions/download-artifact@v2
-        with:
-          name: checkout-widgets-build
-          path: ./packages/checkout/widgets-lib/build
-
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
           registry-url: https://registry.npmjs.org/
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Install dependencies
         run: yarn install --immutable
@@ -136,30 +87,30 @@ jobs:
   cypress-test:
     name: Cypress tests
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Download the sdk-build
-        uses: actions/download-artifact@v2
-        with:
-          name: sdk-build
-          path: ./sdk/dist
-
-      - name: Download the checkout-widgets-build
-        uses: actions/download-artifact@v2
-        with:
-          name: checkout-widgets-build
-          path: ./packages/checkout/widgets-lib/build
-
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
           registry-url: https://registry.npmjs.org/
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Install dependencies
         run: yarn install --immutable
