--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -69,6 +69,7 @@ jobs:
   Test:
     name: Unit tests
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -115,6 +116,7 @@ jobs:
   cypress-test:
     name: Cypress tests
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
