[WT-1521] rename team

--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: wallets-team is owner
-        if: ${{ github.event.requested_team.name == '@immutable/wallets'}}
+        if: ${{ github.event.requested_team.name == 'Wallets'}}
         run: echo "executing steps for wallets-team"
 
       - name: wallets-team not the owner
-        if: ${{ github.event.requested_team.name != '@immutable/wallets'}}
+        if: ${{ github.event.requested_team.name != 'Wallets'}}
         run: echo "executing steps for non-wallets-team"
 
       - name: Checkout
