[WT-1521] add pull-request types

--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -16,6 +16,10 @@ jobs:
         if: ${{ github.event.requested_team.name == 'Wallets'}}
         run: echo "executing steps for wallets-team"
 
+      - name: wallets-team is owner
+        if: ${{ github.event.requested_team.name == 'CODEOWNERS'}}
+        run: echo "executing steps for wallets-team"
+
       - name: wallets-team not the owner
         if: ${{ github.event.requested_team.name != 'Wallets'}}
         run: echo "executing steps for non-wallets-team"
